<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".ui.search.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_arrow_back_24dp" />

        <TextView
            android:id="@+id/tv_title_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ic_arrow_back"
            android:layout_toRightOf="@id/ic_arrow_back"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/search"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:layout_below="@id/tv_title_search"
            app:cardCornerRadius="8dp">

            <net.hafiznaufalr.recipeapps.utils.CustomEditText
                android:id="@+id/et_search"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:drawableStart="@drawable/ic_search_24dp"
                android:drawableLeft="@drawable/ic_search_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:hint="@string/search"
                android:inputType="textCapSentences"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:focusable="true"
                android:clickable="true"
                android:focusedByDefault="true"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_data"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:fontFamily="@font/poppinssemibold"
            android:gravity="center_horizontal"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_search"
            tools:listitem="@layout/item_recipe"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>